# selfservice/flow/registration/handler.go
@@ -216,14 +216,14 @@ type getSelfServiceRegistrationFlow struct {
 	// in: query
 	ID string `json:"id"`
 
-	// HTTP Cookie
+	// HTTP Cookies
 	//
 	// When using the SDK on the server side you must include the HTTP Cookie Header
 	// originally sent to your HTTP handler here.
 	//
 	// in: header
 	// name: Cookie
-	Cookies string `json:"cookies"`
+	Cookies string `json:"cookie"`
 }
 
 // swagger:route GET /self-service/registration/flows public getSelfServiceRegistrationFlow
@@ -247,7 +247,7 @@ type getSelfServiceRegistrationFlow struct {
 //	```js
 //	// pseudo-code example
 //	router.get('/registration', async function (req, res) {
-//	  const flow = await client.getSelfServiceRegistrationFlow(req.header.get('cookie'), req.query['flow'])
+//	  const flow = await client.getSelfServiceRegistrationFlow(req.header('cookie'), req.query['flow'])
 //
 //    res.render('registration', flow)
 //	})
