# selfservice/flow/verification/handler.go
@@ -183,14 +183,14 @@ type getSelfServiceVerificationFlowParameters struct {
 	// in: query
 	FlowID string `json:"id"`
 
-	// HTTP Cookie
+	// HTTP Cookies
 	//
 	// When using the SDK on the server side you must include the HTTP Cookie Header
 	// originally sent to your HTTP handler here.
 	//
 	// in: header
 	// name: Cookie
-	Cookies string `json:"cookies"`
+	Cookies string `json:"cookie"`
 }
 
 // swagger:route GET /self-service/verification/flows public getSelfServiceVerificationFlow
@@ -214,7 +214,7 @@ type getSelfServiceVerificationFlowParameters struct {
 //	```js
 //	// pseudo-code example
 //	router.get('/recovery', async function (req, res) {
-//	  const flow = await client.getSelfServiceVerificationFlow(req.header.get('cookie'), req.query['flow'])
+//	  const flow = await client.getSelfServiceVerificationFlow(req.header('cookie'), req.query['flow'])
 //
 //    res.render('verification', flow)
 //	})
